--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 6.5.9\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-04 14:34-0400\n"
+"PO-Revision-Date: 2017-04-04 14:44-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -91,6 +91,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/ProfileCommon.pm
 msgid "A profile id can only contain alphanumeric characters, dashes, period and or underscores."
+msgstr ""
+
+# html/pfappserver/root/configuration/define_policy.tt
+msgid "A role will allow PacketFence to grant different network access to endpoints connecting to your network. For example, employee vs. guest;"
 msgstr ""
 
 # html/pfappserver/root/admin/reports.tt
@@ -827,6 +831,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Authentication/Source/Eduroam.pm
 msgid "Authentication listening port"
+msgstr ""
+
+# html/pfappserver/root/configuration/define_policy.tt
+msgid "Authentication sources will allow you to identify users and assign them roles and access durations;"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Authentication/Source/HTTP.pm
@@ -3175,6 +3183,10 @@ msgstr ""
 msgid "If you use an alternative port, please specify. This parameter is ignored when the Syslog transport is selected."
 msgstr ""
 
+# html/pfappserver/root/configuration/define_policy.tt
+msgid "If you want to authenticate users or machines using a Active Directory Domain Controller (DC), you have to join the PacketFence server to the DC;"
+msgstr ""
+
 # html/pfappserver/lib/pfappserver/Form/Config/Authentication/Source/SAML.pm
 msgid "If your Identity Provider uses a self-signed certificate, put the path to its certificate here instead."
 msgstr ""
@@ -4619,6 +4631,10 @@ msgstr ""
 
 # html/pfappserver/root/configuration/system_config.tt
 msgid "PacketFence makes use of a MySQL/MariaDB database. You can configure the connection information from this module;"
+msgstr ""
+
+# html/pfappserver/root/configuration/define_policy.tt
+msgid "PacketFence manages switches, access points and WiFi controllers. You have to add the equipment you want PacketFence to manage and do the role by VLAN/ACL/policy identifier mapping;"
 msgstr ""
 
 # html/pfappserver/root/configuration/system_config.tt
@@ -8449,10 +8465,6 @@ msgstr ""
 msgid "Your username or email address"
 msgstr ""
 
-# html/pfappserver/root/configuration/define_policy.tt
-msgid "a role will allow PacketFence to grant different network access to endpoints connecting to your network. For example, employee vs. guest;"
-msgstr ""
-
 # pf::provisioner (Provisioners)
 msgid "accept"
 msgstr "Accept"
@@ -8646,10 +8658,6 @@ msgstr "Auth Status"
 # pf::radius_audit_log (RADIUS Audit Log)
 msgid "auth_type"
 msgstr "Auth Type"
-
-# html/pfappserver/root/configuration/define_policy.tt
-msgid "authentication sources will allow you to identify users and assign them roles and access durations;"
-msgstr ""
 
 # pf::radius_audit_log (RADIUS Audit Log)
 msgid "auto_reg"
@@ -9363,10 +9371,6 @@ msgstr ""
 msgid "ibm"
 msgstr "IBM"
 
-# html/pfappserver/root/configuration/define_policy.tt
-msgid "if you want to authenticate users or machines using a Microsoft Active Domain Controller (DC), you have to join the PacketFence server to the DC;"
-msgstr ""
-
 # pf::radius_audit_log (RADIUS Audit Log)
 msgid "ifindex"
 msgstr "IfIndex"
@@ -9496,10 +9500,6 @@ msgstr "Is a Phone"
 
 # conf/documentation.conf (advanced.language options)
 msgid "it_IT"
-msgstr ""
-
-# html/pfappserver/root/configuration/define_policy.tt
-msgid "lPacketFence manages switches, access points and WiFi controllers. You have to add the equipment you want PacketFence to manage and do the role by VLAN/ACL/policy identifier mapping;"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/User.pm
