--- a/docs/PacketFence_Administration_Guide.asciidoc
+++ b/docs/PacketFence_Administration_Guide.asciidoc
@@ -1539,36 +1539,43 @@ In order to override a default parameter, define it and set it in `pf.conf`.
 
 All these parameters are also accessible through the web-based administration interface under the Configuration tab. It is highly recommended that you use the web-based administration interface of PacketFence for any configuration changes.
 
-Apple and Android Wireless Provisioning
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Apple, Android and Windows Wireless Provisioning
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Apple devices such as iPhones, iPads, iPods and Mac OS X (10.7+) support wireless profile importation using a special XML file format (mobileconfig). Android is also able to support this feature by importing the wireless profile with the Android PacketFence Agent. In fact, installing such file on your Apple device will automatically configure the wireless settings for a given SSID. This feature is often used when the SSID is hidden, and you want to ease the configuration steps on the mobile device (because it is often painful to configure manually). In PacketFence, we are going further, we generate the profile according to the administrator's preference and we pre-populate the file with the user's credentials (without the password). The user simply needs to install its generated file and he will be able to use the new SSID.
 
+The Windows agent will import and apply the provisioned profile so that the user only needs to enter his username and password.
+
 Configure the feature
 ^^^^^^^^^^^^^^^^^^^^^
-NOTE: If EAP-TLS provisioning is desired, you have to configure a PKI before going any further. Two guides exists to assist you: 'PacketFence_PKI_Quick_Install_Guide', which covers PacketFence's implementation, or 'PacketFence_MSPKI_Quick_Install_Guide' which covers Microsoft's.
+NOTE: If EAP-TLS provisioning is desired, you have to configure a PKI before going any further. Two guides exists to assist you: 'PacketFence PKI Quick Install Guide', which covers PacketFence's implementation, or 'PacketFence MSPKI Quick Install Guide' which covers Microsoft's.
 
 First of all, you need to configure the SSID that your devices will use after they go through the authentication process.
 
-In order to do that, in the administration interface, go in 'Portal Configuration -> Provisioners'. Then select the 'android' / 'iOS' provisioner. Enter SSID relative information and roles to which the provisioner applies and save. Note that the default RADIUS certificate path is `/usr/local/pf/raddb/certs/server.crt`.
+In the administration interface, go in 'Advanced Access Configuration -> Provisioners'. Then select 'android' / 'ios' / 'Windows' provisioner. Enter the SSID information and roles for which the provisioner applies. Repeat for all desired provisioners. Note that the default RADIUS certificate path is `/usr/local/pf/raddb/certs/server.crt`.
 
-After, you simply need to add the 'Android' and 'iOS' provisioners to your 'Connection Profile' configuration.
+After, you simply need to add the 'Android', 'iOS' and 'Windows' provisioners to your 'Connection Profile' configuration.
 
 Android specificities
 +++++++++++++++++++++
 
-For Android, you must allow passthroughs in your `pf.conf` configuration file. You might need to adapt the following to your geolocality:
-NOTE: If no other passthrough has been configured before, the feature itself needs to be activated. Please refer to the 'Passthroughs' section of this guide before continuing.
+For Android provisioning support, you must activate and adjust the passthroughs. You might need to adapt them depending on your geolocality.
+NOTE: Please refer to the 'Passthroughs' section of this guide if needed.
 
-  [fencing]
-  passthrough=enabled
-  passthroughs=*.ggpht.com,*.googleusercontent.com,android.clients.google.com,*.googleapis.com,*.android.clients.google.com,*.gvt1.com,*.l.google.com,play.google.com,*.gstatic.com
+In the administation inferface, go in 'Advanced Configuration -> Fencing'. Activate 'Passthrough' and make sure the following passthrough are present:
+
+  *.ggpht.com,*.googleusercontent.com,android.clients.google.com,*.googleapis.com,*.android.clients.google.com,*.gvt1.com,*.l.google.com,play.google.com,*.gstatic.com
 
 Then run the following commands so that passthroughs become effective:  
 
-  /usr/local/pf/bin/pfcmd service iptables restart
   /usr/local/pf/bin/pfcmd configreload hard
+  /usr/local/pf/bin/pfcmd service iptables restart
   /usr/local/pf/bin/pfcmd service pfdns restart
+
+iOS specificities
++++++++++++++++++
+
+Mac OS X/iOS require the provisioning profile to be signed if you want to remove the `untrusted` warning when installing the profile. For more information, please refer to the PKI guides referred earlier in 'Configure the feature' above.
 
 Profile generation
 ^^^^^^^^^^^^^^^^^^
