adjustment to ZEN out of band guide

--- a/docs/PacketFence_Out-of-Band_Deployment_Quick_Guide_ZEN.asciidoc
+++ b/docs/PacketFence_Out-of-Band_Deployment_Quick_Guide_ZEN.asciidoc
@@ -98,7 +98,7 @@ Make sure that there is only one virtual network card created, and also make sur
 Virtual Machine passwords
 -------------------------
 
-.Management (SSH/Console) and MySQL
+.Management (SSH/Console)
 * Login: root
 * Password: p@ck3tf3nc3
 
