proper spacing + regenerate translation file

--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 6.5.9\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-04-04 14:44-0400\n"
+"PO-Revision-Date: 2017-04-12 13:20-0400\n"
 "Last-Translator: Inverse inc. <info@inverse.ca>\n"
 "Language-Team: English\n"
 "Language: en\n"
@@ -81,12 +81,24 @@ msgstr ""
 msgid "A description of the billing tier"
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "A flexible and powerful tool for defining actions based of log file entries in PacketFence."
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "A list of actions to take when the regex matches"
+msgstr ""
+
 # html/pfappserver/root/service/status.tt
 msgid "A manual start from the command line will be required. Are you sure you want to continue?"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Violation.pm
 msgid "A message that will be added to the e-mail sent to the user regarding this violation."
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "A previously created alert pipe (FIFO)"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/ProfileCommon.pm
@@ -270,6 +282,7 @@ msgstr ""
 # html/pfappserver/lib/pfappserver/Form/Field/PfdetectRegexRule.pm
 # html/pfappserver/root/admin/bulk_actions.inc
 # html/pfappserver/root/config/fingerbank/header.tt
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 # html/pfappserver/root/violation/list.tt
 msgid "Action"
 msgstr ""
@@ -290,6 +303,7 @@ msgstr ""
 # html/pfappserver/root/config/fingerbank/dhcp_vendor/list.tt
 # html/pfappserver/root/config/fingerbank/mac_vendor/list.tt
 # html/pfappserver/root/config/fingerbank/user_agent/list.tt
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 # html/pfappserver/root/user/create.tt
 # html/pfappserver/root/user/view.tt
 # html/pfappserver/root/violation/list.tt
@@ -591,6 +605,10 @@ msgstr ""
 msgid "After configuring your first domain, you will need to restart the radiusd service to activate domain authentication."
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Alert Pipe"
+msgstr ""
+
 # html/pfappserver/lib/pfappserver/Form/Config/Pfdetect.pm
 msgid "Alert pipe"
 msgstr ""
@@ -692,6 +710,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Domain.pm
 msgid "An LDAP query to filter out the users that should be cached."
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "An action have two parts"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/PacketFence/Controller/User.pm
@@ -1527,6 +1549,10 @@ msgstr ""
 msgid "Configure various options"
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Configuring a Regex Syslog Parser"
+msgstr ""
+
 # html/pfappserver/root/configurator/fingerbank.tt
 msgid "Configuring your Fingerbank API key will allow for more accurate fingerprinting while using MySQL for the storage improves performance greatly in large scale deployments."
 msgstr ""
@@ -1987,6 +2013,10 @@ msgstr ""
 msgid "Defines what attribute of the node to use as the common name during the certificate generation."
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Defining Actions"
+msgstr ""
+
 # html/pfappserver/root/config/switch/view.tt
 # html/pfappserver/root/violation/view.tt
 msgid "Definition"
@@ -2246,7 +2276,6 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Fingerbank/Combination.pm
 # html/pfappserver/root/config/fingerbank/combination/list.tt
-# html/pfappserver/root/config/fingerbank/device/upstream/index.tt
 # html/pfappserver/root/config/fingerbank/device/upstream/view.tt
 # html/pfappserver/root/config/fingerbank/device/view.tt
 msgid "Device"
@@ -2283,6 +2312,7 @@ msgid "Device type"
 msgstr ""
 
 # html/pfappserver/root/config/fingerbank/device/index.tt
+# html/pfappserver/root/config/fingerbank/device/upstream/index.tt
 # html/pfappserver/root/user/view.tt
 msgid "Devices"
 msgstr ""
@@ -2330,7 +2360,7 @@ msgid "Domain"
 msgstr ""
 
 # conf/documentation.conf (general.domain)
-msgid "Domain name of PacketFence system."
+msgid "Domain name of PacketFence system. Changing this requires to restart haproxy."
 msgstr ""
 
 # html/pfappserver/root/configurator/configuration.tt
@@ -2515,6 +2545,7 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Pfdetect.pm
 # html/pfappserver/lib/pfappserver/Form/Violation.pm
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 msgid "Enabled"
 msgstr ""
 
@@ -2591,6 +2622,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Field/ExtendedDuration.pm
 msgid "Example"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Example Action"
 msgstr ""
 
 # html/pfappserver/root/config/authentication.tt
@@ -2939,7 +2974,7 @@ msgid "Host which hosts the PacketFence PKI"
 msgstr ""
 
 # conf/documentation.conf (general.hostname)
-msgid "Hostname of PacketFence system. This is concatenated with the domain in Apache rewriting rules and therefore must be resolvable by clients."
+msgid "Hostname of PacketFence system. This is concatenated with the domain in Apache rewriting rules and therefore must be resolvable by clients. Changing this requires to restart haproxy."
 msgstr ""
 
 # html/pfappserver/root/configurator/configuration.tt
@@ -3047,7 +3082,11 @@ msgid "IP"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Field/PfdetectRegexRule.pm
-msgid "IP <=> MAC"
+msgid "IP <i class=\"icon-exchange\"></i> MAC"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "IP <i class=\\"icon-exchange\\"></i> MAC"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/FloatingDevice.pm
@@ -3320,6 +3359,14 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Node.pm
 msgid "Last Seen"
+msgstr ""
+
+# html/pfappserver/lib/pfappserver/PacketFence/Controller/Pfqueue.pm
+msgid "Last hour queue counts"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Last if matches"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/User.pm
@@ -3838,6 +3885,7 @@ msgstr ""
 # html/pfappserver/root/config/authentication.tt
 # html/pfappserver/root/config/fingerbank/device/list.tt
 # html/pfappserver/root/config/fingerbank/mac_vendor/list.tt
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 # html/pfappserver/root/config/pki_provider/list.tt
 # html/pfappserver/root/config/profile/index.tt
 # html/pfappserver/root/config/roles/index.tt
@@ -4410,6 +4458,7 @@ msgstr ""
 msgid "Operating Systems"
 msgstr ""
 
+# html/pfappserver/root/admin/auditing.tt
 # html/pfappserver/root/admin/auditing_option82.tt
 msgid "Option82"
 msgstr "Option82"
@@ -4777,6 +4826,7 @@ msgid "Path to Service Provider key (x509)"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Field/PfdetectRegexRule.pm
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 msgid "Perform automatic translation of IPs to MACs and the other way around"
 msgstr ""
 
@@ -5332,6 +5382,7 @@ msgstr ""
 msgid "RADIUS Accounting requests received/s"
 msgstr ""
 
+# html/pfappserver/root/admin/auditing.tt
 # html/pfappserver/root/admin/auditing_radius_log.tt
 msgid "RADIUS Audit Log"
 msgstr "RADIUS Audit Log"
@@ -5557,7 +5608,12 @@ msgid "Reevaluate access"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Field/PfdetectRegexRule.pm
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 msgid "Regex"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Regex Syslog Parser Rule"
 msgstr ""
 
 # html/pfappserver/root/admin/bulk_actions.inc
@@ -5808,6 +5864,7 @@ msgid "Rule"
 msgstr ""
 
 # html/pfappserver/root/authentication/source/rules_read.tt
+# html/pfappserver/root/config/pfdetect/type/regex.tt
 msgid "Rules"
 msgstr ""
 
@@ -6224,8 +6281,11 @@ msgid "Service Provider entity ID"
 msgstr ""
 
 # html/pfappserver/root/admin/status.tt
-# html/pfappserver/root/service/status.tt
 msgid "Services"
+msgstr ""
+
+# html/pfappserver/root/service/status.tt
+msgid "Services on:"
 msgstr ""
 
 # html/pfappserver/root/configurator/database.tt
@@ -6670,6 +6730,10 @@ msgstr ""
 msgid "Stop processing rules if this rule matches"
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "Stop processing the other rules if this rule matched"
+msgstr ""
+
 # html/pfappserver/root/configurator/services.tt
 # html/pfappserver/root/service/cluster_status.tt
 # html/pfappserver/root/service/status.tt
@@ -6983,6 +7047,10 @@ msgstr ""
 msgid "The Private Key for signing in pem format"
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The Regex Syslog Parser"
+msgstr ""
+
 # html/pfappserver/lib/pfappserver/Form/Config/ProfileCommon.pm
 msgid "The Root Portal Module to use"
 msgstr ""
@@ -7140,6 +7208,14 @@ msgstr ""
 msgid "The last step of this configuration wizard is to start the PacketFence daemons."
 msgstr ""
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The list of parameters you want to provide to the method. Each parameter is seperated by a comma. The parameters that are to be replaced by a named capture."
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The list of rules that defines how to match log file entries and what action(s) to take when matching"
+msgstr ""
+
 # conf/documentation.conf (database_advanced.max_allowed_packet)
 msgid "The max_allowed_packet MySQL configuration attribute (in MB). Only change if you know what you are doing. Will only affect a locally running MySQL server."
 msgstr ""
@@ -7162,6 +7238,14 @@ msgstr ""
 
 # html/pfappserver/root/configuration/portal_config.tt
 msgid "The module allows you to deeply customize the captive portal workflows;"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The name of the action you want to take"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The name of the rule"
 msgstr ""
 
 # html/pfappserver/root/node/create.tt
@@ -7239,6 +7323,10 @@ msgstr ""
 
 # conf/documentation.conf (database_advanced.query_cache_size)
 msgid "The query_cache_size MySQL configuration attribute. Only change if you know what you are doing. Will only affect a locally running MySQL server."
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "The regex to match against a log entry. The regex may have <a href=\\"http://perldoc.perl.org/perlre.html#(%3f'NAME'pattern)\\">named captures</a> which can be used for parameter replacement start a '$'."
 msgstr ""
 
 # conf/documentation.conf (device_registration.role)
@@ -8400,6 +8488,10 @@ msgstr ""
 
 # html/pfappserver/lib/pfappserver/Form/Config/Realm.pm
 msgid "You can add options in the realm definition"
+msgstr ""
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "You can enable/disable the parser from running"
 msgstr ""
 
 # html/pfappserver/lib/pfappserver/PacketFence/Controller/Admin.pm
@@ -9606,6 +9698,10 @@ msgstr "API key"
 msgid "metadefender.query_url_hash"
 msgstr "Query URL hash"
 
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "method"
+msgstr ""
+
 # html/pfappserver/lib/pfappserver/Form/Field/Duration.pm
 msgid "minutes"
 msgstr ""
@@ -9852,6 +9948,10 @@ msgstr ""
 # pf::config (Network types)
 msgid "other"
 msgstr "Other"
+
+# html/pfappserver/root/config/pfdetect/type/regex.tt
+msgid "parameter list"
+msgstr ""
 
 # conf/documentation.conf
 msgid "parking"
